# tbps

./: .gitattributes  .gitignore  Dockerfile  Dockerfile.app  README.md  docker-compose.yaml  docker-compose.yml  flake.nix  handlers.py  init-databases.sh  main.py  main_new.py  main_server.py  mock_server.py  myexpr.py  process_single.py  pyproject.toml  shell.nix  start.sh  stru  test_final.py  test_mock_server.sh
.github/workflows/: ci.yaml
Lean_tool/: LeanTool.lean  expr_output.json  input_expr.txt  lakefile.toml
Lean_tool/Lean_tool/: Main.lean  README.md  expr_output.json
WL/: db_utils.py  wl_kernel.py
WL_embedding/: db_utils.py  wl_kernel.py
compute/: zss_compute.py
data/: mathlib_filtered_backup0515.sql.xz  wl_encodings_new_backup0515.sql.xz
pkgs/: shell.nix  tbps-be.nix
scripts/: build-image-be.sh  build-lean.sh  conn-db.sh  decompress.sh  exec-sql-file.sh  import-data.sh  init-db.sh  run-cli.sh  run-web.sh  test-curl.sh
search-app/: cse.py  encode.py  main.py  main_new.py
search-app/WL_embedding/: db_utils.py
search_app/: main.py  process_single.py
search_app/compute/: zss_compute.py
tbps-be/: base_server.py  pyproject.toml  requirements.txt
tbps-be/Lean_tool/: expr_output.json  lake-manifest.json
tbps-be/search_app/: cluster_wl.py  cse.py  main_new.py
tbps-be/search_app/WL/: db_utils.py
tbps-fe/: package.json  pnpm-lock.yaml
tbps-fe/app/: layout.tsx  page.tsx
tbps-fe/components/: HealthStatus.tsx  RouteIndicator.tsx  SearchPage.tsx  ServerSelector.tsx  TheoremSearch.tsx  providers.tsx
tbps-fe/lib/: actions.ts  api.ts
(+3 files in other folders)
