[project]
name = "tbps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.6",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    "zss>=1.2.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.11.7",
    "fastapi>=0.116.1",
]
